--- a/src/frontend/quasar-project/index.html
+++ b/src/frontend/quasar-project/index.html
@@ -16,27 +16,27 @@
       rel="icon"
       type="image/png"
       sizes="128x128"
-      href="/icons/favicon-128x128.png"
+      href="icons/favicon-128x128.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="/icons/favicon-96x96.png"
+      href="icons/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/icons/favicon-32x32.png"
+      href="icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/icons/favicon-16x16.png"
+      href="icons/favicon-16x16.png"
     />
-    <link rel="icon" type="image/ico" href="/favicon.ico" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
   <body>
     <!-- quasar:entry-point -->
